App13 Первый заработавший тест
